RESOLVED FIXED216218
Fix formatting of LegacyOverrideBuiltIns
https://bugs.webkit.org/show_bug.cgi?id=216218
Summary Fix formatting of LegacyOverrideBuiltIns
Sam Weinig
Reported 2020-09-05 14:36:41 PDT
Fix formatting of LegacyOverrideBuiltIns
Attachments
Patch (1.45 KB, patch)
2020-09-05 14:37 PDT, Sam Weinig
no flags
Patch (1.37 KB, patch)
2020-09-05 17:12 PDT, Sam Weinig
no flags
Sam Weinig
Comment 1 2020-09-05 14:37:56 PDT
Darin Adler
Comment 2 2020-09-05 15:18:29 PDT
Comment on attachment 408098 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=408098&action=review > Source/WebCore/bindings/js/JSDOMAbstractOperations.h:35 > +enum class LegacyOverrideBuiltIns { No, Yes }; Extra space before "No".
Sam Weinig
Comment 3 2020-09-05 17:12:03 PDT
EWS
Comment 4 2020-09-05 17:44:11 PDT
Committed r266676: <https://trac.webkit.org/changeset/266676> All reviewed patches have been landed. Closing bug and clearing flags on attachment 408105 [details].
Radar WebKit Bug Importer
Comment 5 2020-09-05 17:45:22 PDT
Note You need to log in before you can comment on or make changes to this bug.