Fix formatting of LegacyOverrideBuiltIns https://bugs.webkit.org/show_bug.cgi?id=216218

Reviewed by Darin Adler.

Neglected to fix this bit of feedback in a previous change. Makes
enum class LegacyOverrideBuiltIns a bit more readable.

* bindings/js/JSDOMAbstractOperations.h:


Canonical link: https://commits.webkit.org/229045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266676 268f45cc-cd09-0410-ab3c-d52691b4dbfc